added statistics
